<resources>
    <string name="app_name">WeRy</string>
    <string name="bottom_navigation_main">main</string>
    <string name="bottom_navigation_group">group</string>
    <string name="bottom_navigation_map">map</string>
    <string name="bottom_navigation_mission">mission</string>
    <string name="bottom_navigation_mypage">myPage</string>
    <string name="onBoarding_next">다음</string>
    <string name="onBoard_title_one">남들은 볼 수 없는\n우리만의 공간이 필요하다면?</string>
    <string name="onBoard_title_two">친구의 일상에\n공감 이모지를 남겨봐요!</string>
    <string name="onBoard_title_three">친구들과의 추억을\n모아서 한눈에 볼 수 있어요!</string>
    <string name="onBoard_title_four">친구들과 함께 하고 싶은\n버킷리스트가 있나요?</string>
    <string name="onBoard_content_one">원하는 그룹을 생성해 그룹원들과\n일상을 공유해 보세요.</string>
    <string name="onBoard_content_two">심도 있는 소통을 원하시나요?\n그룹원의 기록에 이모지를 남겨 공감할 수 있어요.</string>
    <string name="onBoard_content_three">모아보기 지도를 통해\n다양한 장소에서 남긴 추억을 확인해 보세요.</string>
    <string name="onBoard_content_four">원하는 그룹과 미션을 생성해 보세요.\n미션을 달성하면 스티커를 획득할 수 있어요!</string>
    <string name="sign_in_id_hint">이메일을 입력하세요.</string>
    <string name="sign_in_pw_hint">비밀번호를 입력하세요.</string>
    <string name="sign_in_auto_login">로그인 상태 유지</string>
    <string name="sign_in_login">로그인</string>
    <string name="sign_in_find_id">아이디 찾기</string>
    <string name="sign_in_reset_pw">비밀번호 재설정</string>
    <string name="sign_in_sign_up">회원가입</string>
    <string name="sign_in_error">아이디 또는 비밀번호가 일치하지 않습니다.</string>
    <string name="sign_in_confirm">확인</string>
    <string name="sign_up_use_agreement_title">서비스 이용 약관에 동의해 주세요.</string>
    <string name="sign_up_use_agreement_all_agree">모두 동의</string>
    <string name="sign_up_use_agreement_position_terms">[필수] 위치기반서비스 이용약관 동의</string>
    <string name="sign_up_use_agreement_private_information_content">[필수] 개인정보 처리방침 동의</string>
    <string name="sign_up_use_agreement_next">다음</string>
    <string name="sign_up_use_agreement_conetent">[필수] 서비스 이용약관 동의</string>
    <string name="sign_up_welcome_start">시작하기</string>
    <string name="sign_up_welcome_top_title">반가워요 </string>
    <string name="sign_up_welcome_bottom_title">회원 가입이 완료되었어요!</string>
    <string name="sign_up_welcome_content">위어리에서 친구들과 함께\n생각을 기록하고 일상을 공유하러 떠나볼까요? </string>
    <string name="sign_up_name_title">이름을 입력해주세요</string>
    <string name="sign_up_name_hint">김워어리</string>
    <string name="sign_up_name_error">올바른 이름을 입력해 주세요.</string>
    <string name="sign_up_email_title">이메일을 입력해주세요</string>
    <string name="sign_up_email_content">로그인 또는 회원가입을 위해 사용됩니다.</string>
    <string name="sign_up_email_hint">wery7942@mail.com</string>
    <string name="sign_up_email_error">올바른 형태의 이메일 주소를 입력해 주세요.</string>
    <string name="sign_up_email_dialog_error">이미 가입된 이메일 입니다.</string>
    <string name="sign_up_password_title_top">에서 사용할</string>
    <string name="sign_up_password_title_bottom">비밀번호를 입력해 주세요.</string>
    <string name="sign_up_password_content">8~12자 영문 대 소문자, 숫자, 특수문자를 사용해주세요.</string>
    <string name="sign_up_password_hint">비밀번호</string>
    <string name="sign_up_password_error">영문 대 소문자, 숫자, 특수문자만 사용할 수 있어요.</string>
    <string name="sign_up_password_length_error">비밀번호는 8~12자까지 입력할 수 있어요.</string>
    <string name="sign_up_password_max_count">/12</string>
    <string name="sign_up_nickname_title_top">에서 사용할</string>
    <string name="sign_up_nickname_title_bottom">별명을 입력해주세요.</string>
    <string name="sign_up_nickname_error">이미 사용중인 별명입니다.</string>
    <string name="sign_up_nickname_count_error">14자를 초과했습니다.</string>
    <string name="sign_up_nickname_max_count">/14</string>
    <string name="sign_up_nickname_comment">최대 14자까지 가능해요.</string>
    <string name="writing_select_group">그룹 선택</string>
    <string name="writing_register">등록</string>
    <string name="writing_add_place">장소 추가하기</string>
    <string name="writing_note_hint">어떤 이야기를 해볼까요?</string>
    <string name="writing_my_group">내 그룹</string>
    <string name="writing_close">글쓰기 종료</string>
    <string name="writing_text_close">글쓰기 종료 시 작성 중인 글은 저장되지 않아요.</string>
    <string name="writing_title_close">글쓰기를 종료하시겠어요?</string>
    <string name="writing_cancel">취소</string>
    <string name="search_place_add_place">장소 추가하기</string>
    <string name="search_place_hint">장소명, 지번, 도로명으로 검색</string>
    <string name="home_search_hint">어떤 추억이 궁금하신가요?</string>
    <string name="home_noGroup_title">가입된 그룹이 없어요</string>
    <string name="home_noGroup_content">초대받은 그룹이 없다면\n친한 친구와 그룹을 만들어보세요!</string>
    <string name="home_group_create">그룹 만들기</string>
    <string name="home_group_invite">초대 받았어요</string>
    <string name="home_my_group">내 그룹</string>
    <string name="home_recent_post">최신 글</string>
    <string name="home_all_my_group">전체보기</string>
    <string name="home_item_post_comment">댓글</string>
    <string name="home_item_post_hit">조회</string>
    <string name="home_item_post_emotion_button">공감하기</string>
    <string name="home_item_post_comment_write_button">댓글쓰기</string>
    <string name="home_item_post_image_count_slash">/</string>
    <string name="home_item_no_location">어디를 방문하셨나요?</string>
    <string name="home_no_post">작성된 게시물이 없어요</string>
    <string name="home_post_image">%d / %d</string>
    <string name="create_group">그룹 만들기</string>
    <string name="create_group_group_name">그룹 이름</string>
    <string name="create_group_name_hint">그룹 이름을 입력해 주세요.</string>
    <string name="create_group_name_info">그룹명과 사진은 개설 후에도 변경할 수 있어요!</string>
    <string name="create_group_introduce">그룹 소개</string>
    <string name="create_group_introduce_hint">어떤 그룹인가요?</string>
    <string name="create_group_name_error_cnt_msg">최대 12자까지 입력 가능해요</string>
    <string name="create_group_introduce_error_cnt_msg">최대 25자까지 입력 가능해요</string>
    <string name="create_group_done">완료</string>
    <string name="create_add_photo">사진 추가</string>
    <string name="create_group_name_limit">%d/12</string>
    <string name="create_group_introduce_limit">%d/30</string>
    <string name="create_group_select_gallery">앨범에서 선택</string>
    <string name="create_group_delete_group_img">그룹 사진 삭제</string>
    <string name="map_collect">모아보기</string>
    <string name="map_search_current_location">현 위치 재검색</string>
    <string name="map_search_hint">어떤 장소가 궁금하신가요?</string>
    <string name="map_content_count">+%d</string>
    <string name="mission">미션</string>
    <string name="mission_my_mission">내 미션</string>
    <string name="mission_sticker">스티커</string>
    <string name="mission_progress">진행 중인 미션</string>
    <string name="mission_more">더보기</string>
    <string name="mission_remain_day">남은 기간순</string>
    <string name="mission_empty_title">인증할 미션이 없어요</string>
    <string name="mission_empty_content">친구와 함께 가고 싶은 장소를 작성해 보세요!</string>
    <string name="mission_how_about_this">이런 미션은 어때요? 👀</string>
    <string name="mission_this_week_recommend_mission">이번 주 추천 미션이에요 😉</string>
    <string name="mission_add_mission">미션 추가하기</string>
    <string name="create_mission_name">미션 이름</string>
    <string name="create_mission_name_hint">함께할 미션을 적어주세요</string>
    <string name="create_mission_info">미션 이름과 장소, 기간은 등록 후 수정할 수 없어요!</string>
    <string name="create_mission_cnt_error">최대 20자까지 입력 가능해요</string>
    <string name="create_mission_max_cnt">/20</string>
    <string name="create_mission_place">미션 장소</string>
    <string name="create_mission_place_hint">어디를 방문하실 건가요?</string>
    <string name="create_mission_due">기간</string>
    <string name="create_mission_due_exist">기간 있음</string>
    <string name="create_mission_due_no_exist">기간 없음</string>
    <string name="create_mission_start_date">시작일</string>
    <string name="create_mission_end_date">종료일</string>
    <string name="create_mission_select_group">그룹 선택</string>
    <string name="create_mission_card_color">카드 색상</string>
    <string name="sticker_my_mission_progress">내 미션 현황</string>
    <string name="sticker_info_default">세 개의 미션을 달성하면 스티커를 받을 수 있어요 🎁</string>
    <string name="sticker_info_level_state">lv. %d 달성까지 %d번 남았어요 👋</string>
    <string name="sticker_info_level_done">lv. %d 달성 완료 🥳 다음 미션을 하러 떠나볼까요?</string>
    <string name="sticker_speech_bubble">다 채우면 스티커</string>
    <string name="sticker_earn_sticker">획득한 스티커</string>
    <string name="sticker_infinite">무제한</string>
    <string name="sticker_dialog_close">닫기</string>
    <string name="sticker_dialog_show_sticker">스티커 보기</string>
    <string name="sticker_dialog_content_first">을 달성해 스티커를 획득했어요.</string>
    <string name="sticker_dialog_content_sec">받은 스티커는 미션/스티커에서 확인할 수 있어요.</string>
    <string name="sticker_info">스티커 정보</string>
    <string name="sticker_due">사용기간 무제한</string>
    <string name="sticker_my_mission_level_one">Lv. 1</string>
    <string name="sticker_my_mission_level_two">Lv. 2</string>
    <string name="sticker_main_level">Lv. %d</string>
    <string name="bottom_sheet_bookmark">북마크 하기</string>
    <string name="bottom_sheet_clip">링크 복사하기</string>
    <string name="bottom_sheet_modify">수정</string>
    <string name="bottom_sheet_remove">삭제</string>
    <string name="bottom_sheet_bookmark_cancel">북마크 취소하기</string>
    <string name="bottom_sheet_clip_toast">아직 공사중이에요</string>
    <string name="bottom_sheet_on_bookmark_toast">북마크 완료!</string>
    <string name="bottom_sheet_off_bookmark_toast">북마크가 해제되었어요!</string>
    <string name="bottom_sheet_remove_toast">성공적으로 삭제되었어요!</string>
    <string name="bottom_sheet_invite_title">함께 할 친구를 초대해 보세요</string>
    <string name="bottom_sheet_invite_toast">앱에서 초대하기</string>
    <string name="post_cancel">취소</string>
    <string name="post_remove">삭제</string>
    <string name="post_remove_content">이 동작은 취소할 수 없으며 내 프로필, 내가 속한 그룹의 피드, 그리고 앱 검색 결과에서 삭제됩니다.</string>
    <string name="post_remove_title">게시물을 삭제하시겠어요?</string>
    <string name="no_group_title">즐겨 찾는 그룹이 없어요</string>
    <string name="no_group_content">별을 누르면 즐겨 찾는 그룹을 설정할 수 있어요.</string>
    <string name="group_title">내 그룹</string>
    <string name="group_filter">업데이트순</string>
    <string name="post_detail_hit">조회</string>
    <string name="post_detail_emotion">공감</string>
    <string name="post_detail_comment">댓글</string>
    <string name="post_detail_hint">댓글을 남겨주세요.</string>
    <string name="post_detail_hint_sticker">원하는 스티커를 더블 클릭해서 남겨주세요.</string>
    <string name="post_detail_no_sticker">획득한 스티커가 없어요</string>
    <string name="access_group_member">그룹 멤버</string>
    <string name="access_group_newest_post">최신 글</string>
    <string name="access_group_mission_ing">진행 중인 미션</string>
    <string name="access_group_invite_button">초대하기</string>
    <string name="access_group_day">D-%1$d</string>
    <string name="access_group_d_day">D-day</string>
    <string name="access_group_day_ing">D-ing</string>
    <string name="mission_detail_show_detail">미션 상세보기</string>
    <string name="mission_detail_mission_place">미션 장소</string>
    <string name="mission_detail_mission_delete">미션 삭제하기</string>
    <string name="mission_detail_made_by">님이 만든 미션</string>
    <string name="mission_detail_due">기간</string>
    <string name="mission_detail_in_group">참여 중인 그룹</string>
    <string name="mission_detail_certify">인증하기</string>
    <string name="mission_detail_write">인증글 쓰기</string>
    <string name="mission_detail_period">%1$s ~ %2$s</string>
    <string name="mission_detail_no_period">%1$s ~ ing</string>
    <string name="mission_detail_toast_message_success">위치 인증 완료!</string>
    <string name="mypage_configuration_title">환경설정</string>
    <string name="mypage_configuration_user_set_up">사용자 설정</string>
    <string name="mypage_configuration_account">계정 정보 관리</string>
    <string name="mypage_configuration_user_agree">사용자 이용약관</string>
    <string name="mypage_configuration_etc">기타</string>
    <string name="mypage_configuration_logout">로그아웃</string>
    <string name="mypage_configuration_drop_out">탈퇴하기</string>
    <string name="mypage_configuration_version">버전 V1.0.0</string>
</resources>