<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/selector_main"
        android:title="@string/bottom_navigation_main" />

    <item
        android:id="@+id/groupFragment"
        android:icon="@drawable/selector_group"
        android:title="@string/bottom_navigation_group" />

    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/selector_map"
        android:title="@string/bottom_navigation_map" />

    <item
        android:id="@+id/missionFragment"
        android:icon="@drawable/selector_mission"
        android:title="@string/bottom_navigation_mission" />

    <item
        android:id="@+id/myPageFragment"
        android:icon="@drawable/selector_mypage"
        android:title="@string/bottom_navigation_mypage" />
</menu>