<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="329dp"
        android:background="@drawable/inset_ffffff_radius_10_16"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/TextView.Body.16.M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_remove_title"
            android:textColor="@color/black" />

        <TextView
            style="@style/TextView.Body.14.R"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/post_remove_content"
            android:textColor="@color/color_9da1a6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/MaterialButton.14.sb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/post_cancel"
                android:textColor="@color/color_9da1a6" />

            <com.google.android.material.button.MaterialButton
                style="@style/MaterialButton.14.sb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/post_remove"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</layout>