<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.dnd_8th_4_android.wery.presentation.ui.sign.viewmodel.SignUpNicknameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_logo"
            app:layout_constraintBottom_toBottomOf="@id/tv_nickname_top"
            app:layout_constraintStart_toStartOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="@id/tv_nickname_top" />

        <TextView
            android:id="@+id/tv_nickname_top"
            style="@style/TextView.Title.20.Sb.160"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:layout_marginStart="7dp"
            android:text="@string/sign_up_nickname_title_top"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/iv_back"
            app:layout_constraintStart_toEndOf="@id/iv_logo"/>

        <TextView
            android:id="@+id/tv_nickname_bottom"
            style="@style/TextView.Title.20.Sb.160"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/sign_up_nickname_title_bottom"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/iv_logo"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname_top" />

        <TextView
            android:id="@+id/tv_comment"
            style="@style/TextView.Body.14.M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/sign_up_nickname_comment"
            android:textColor="@color/gray500"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname_bottom" />

        <EditText
            android:id="@+id/et_nickname"
            style="@style/TextView.Title.16.Sb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:background="@drawable/selector_et_sign_up"
            android:inputType="text"
            android:maxLines="1"
            android:padding="16dp"
            android:text="@={vm.signUpNickname}"
            android:textColor="@drawable/selector_et_sign_up"
            android:textColorHint="@color/gray500"
            app:addTextChangedListener="@{vm.textWatcher}"
            app:layout_constraintTop_toBottomOf="@id/tv_comment" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_nickname">

            <TextView
                android:id="@+id/tv_count"
                style="@style/TextView.Caption.12.R"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.textCount.toString()}"
                tools:text="N" />

            <TextView
                style="@style/TextView.Caption.12.R"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_nickname_max_count" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_nickname_error"
            style="@style/TextView.Caption.12.R"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up_nickname_error"
            android:textColor="@color/color_eb0555"
            android:visibility="@{vm.isExisted() ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/et_nickname" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/MaterialButton.8.16.M"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/selector_btn"
            android:enabled="@{vm.isEnabled}"
            android:paddingVertical="16dp"
            android:text="@string/sign_up_use_agreement_next"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>