<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextView.Title.20.Sb.160"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up_name_title"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/iv_back" />

        <EditText
            android:id="@+id/et_name"
            style="@style/TextView.Title.16.Sb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="166dp"
            android:background="@drawable/selector_et_sign_up"
            android:hint="@string/sign_up_name_hint"
            android:padding="16dp"
            android:textColor="@drawable/selector_et_sign_up"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/MaterialButton.8.16.M"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/selector_btn"
            android:enabled="false"
            android:paddingVertical="16dp"
            android:text="@string/sign_up_use_agreement_next"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>